--- a/PageObjModel/test-output/index.html
+++ b/PageObjModel/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-TestRegisterCustomer">
-                    <span>C:\Users\rrtundurwar\workspace\PageObjModel\testng.xml</span>
+                    <span>C:\Users\rrtundurwar\git\PageObjectModel\PageObjModel\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -147,7 +147,7 @@
         </div> <!-- panel TestRegisterCustomer -->
         <div panel-name="test-xml-TestRegisterCustomer" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rrtundurwar\workspace\PageObjModel\testng.xml</span>
+            <span class="header-content">C:\Users\rrtundurwar\git\PageObjectModel\PageObjModel\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -203,16 +203,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyRegistrationTest')
 data.setCell(0, 2, 'com.app.tests.RegisterTest')
-data.setCell(0, 3, 4288);
+data.setCell(0, 3, 4788);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyContactLinkTest')
 data.setCell(1, 2, 'com.app.tests.RegisterTest')
-data.setCell(1, 3, 1611);
+data.setCell(1, 3, 1683);
 window.suiteTableData['TestRegisterCustomer']= { tableData: data, tableDiv: 'times-div-TestRegisterCustomer'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-TestRegisterCustomer">
               </div> <!-- times-div-TestRegisterCustomer -->
             </div> <!-- times-div -->
@@ -245,23 +245,23 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyRegistrationTest</span>
-                <span class="method-start">10676 ms</span>
+                <span class="method-start">11310 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">14975 ms</span>
+                <span class="method-start">16114 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">17179 ms</span>
+                <span class="method-start">16833 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyContactLinkTest</span>
-                <span class="method-start">26502 ms</span>
+                <span class="method-start">27056 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28114 ms</span>
+                <span class="method-start">28740 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
