--- a/PageObjModel/test-output/old/TestRegisterCustomer/methods-alphabetical.html
+++ b/PageObjModel/test-output/old/TestRegisterCustomer/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestRegisterCustomer</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6995df">  <td>20/09/27 09:18:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.setup()[pri:0, instance:com.app.tests.RegisterTest@1e643faf]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1166807841</td>   <td></td> </tr>
-<tr bgcolor="6995df">  <td>20/09/27 09:19:13</td>   <td>17178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.setup()[pri:0, instance:com.app.tests.RegisterTest@1e643faf]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1166807841</td>   <td></td> </tr>
-<tr bgcolor="6995df">  <td>20/09/27 09:19:10</td>   <td>14974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:com.app.tests.RegisterTest@1e643faf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1166807841</td>   <td></td> </tr>
-<tr bgcolor="6995df">  <td>20/09/27 09:19:24</td>   <td>28113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:com.app.tests.RegisterTest@1e643faf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1166807841</td>   <td></td> </tr>
-<tr bgcolor="6995df">  <td>20/09/27 09:19:22</td>   <td>26501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyContactLinkTest()[pri:1, instance:com.app.tests.RegisterTest@1e643faf]">verifyContactLinkTest</td> 
-  <td>main@1166807841</td>   <td></td> </tr>
-<tr bgcolor="6995df">  <td>20/09/27 09:19:06</td>   <td>10675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyRegistrationTest()[pri:0, instance:com.app.tests.RegisterTest@1e643faf]">verifyRegistrationTest</td> 
-  <td>main@1166807841</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>20/09/27 10:09:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.setup()[pri:0, instance:com.app.tests.RegisterTest@4cf777e8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@867398280</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>20/09/27 10:09:21</td>   <td>15963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.setup()[pri:0, instance:com.app.tests.RegisterTest@4cf777e8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@867398280</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>20/09/27 10:09:20</td>   <td>15121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:com.app.tests.RegisterTest@4cf777e8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@867398280</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>20/09/27 10:09:33</td>   <td>28337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:com.app.tests.RegisterTest@4cf777e8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@867398280</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>20/09/27 10:09:31</td>   <td>26729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyContactLinkTest()[pri:1, instance:com.app.tests.RegisterTest@4cf777e8]">verifyContactLinkTest</td> 
+  <td>main@867398280</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>20/09/27 10:09:15</td>   <td>10282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyRegistrationTest()[pri:0, instance:com.app.tests.RegisterTest@4cf777e8]">verifyRegistrationTest</td> 
+  <td>main@867398280</td>   <td></td> </tr>
 </table>
